# Script-de-instalacion

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  main.py
.github/workflows/: ci.yml  release.yml
config/: entorno.py  paquetes.py  paquetes_aur.py
src/: catalog.rs  detect.rs  estimate.rs  hardware.rs  installer.rs  main.rs  model.rs  options.rs  preflight.rs  profile.rs  repo_api.rs  tui.rs  update.rs  validate.rs  validate_profile.rs
